crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_fn_type.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_fn_type

trait Callable[y10] { call(y10): String }
instance traits__trait_fn_type.Callable[$Fun1$Int$String] { call=Callable$$$Fun1$Int$String$$call }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn greet(v0: Int) -> String =
  "hello"

fn main() -> Unit =
  let v2: (Int) -> String = make_closure(greet, [])
  let v3: Dict[traits__trait_fn_type.Callable, (Int) -> String] = get_dict traits__trait_fn_type.Callable[(Int) -> String]
  let v4: String = trait_call traits__trait_fn_type.Callable.call(v3, v2)
  let v1: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v1, v4)
  v5

fn Callable$$$Fun1$Int$String$$call(v6: (Int) -> String) -> String =
  let v7: String = call_closure v6(42)
  v7
