crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_fn_type_nonoverlap.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_fn_type_nonoverlap

trait Convert[h8] { convert(h8): String }
instance traits__trait_fn_type_nonoverlap.Convert[$Fun1$$Var0$Int] { convert=Convert$$$Fun1$$Var0$Int$$convert }
instance traits__trait_fn_type_nonoverlap.Convert[$Fun1$$Var0$Bool] { convert=Convert$$$Fun1$$Var0$Bool$$convert }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn f(v0: String) -> Int =
  0

fn g(v1: String) -> Bool =
  true

fn main() -> Unit =
  let v2: (String) -> Int = make_closure(f, [])
  let v3: Dict[traits__trait_fn_type_nonoverlap.Convert, (String) -> Int] = get_dict traits__trait_fn_type_nonoverlap.Convert[(String) -> Int]
  let v4: String = trait_call traits__trait_fn_type_nonoverlap.Convert.convert(v3, v2)
  let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v6: Unit = call println(v5, v4)
  let v8: (String) -> Bool = make_closure(g, [])
  let v9: Dict[traits__trait_fn_type_nonoverlap.Convert, (String) -> Bool] = get_dict traits__trait_fn_type_nonoverlap.Convert[(String) -> Bool]
  let v10: String = trait_call traits__trait_fn_type_nonoverlap.Convert.convert(v9, v8)
  let v7: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v7, v10)
  v11

fn Convert$$$Fun1$$Var0$Int$$convert(v12: (i8) -> Int) -> String =
  "to-int"

fn Convert$$$Fun1$$Var0$Bool$$convert(v13: (j8) -> Bool) -> String =
  "to-bool"
