crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_fn_type_parameterized.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_fn_type_parameterized

trait Test[j11] { test(j11): String }
instance traits__trait_fn_type_parameterized.Test[$Fun0$$Var0] { test=Test$$$Fun0$$Var0$$test }
instance traits__trait_fn_type_parameterized.Test[$Fun1$Int$$Var0] { test=Test$$$Fun1$Int$$Var0$$test }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn f() -> String =
  "hello"

fn g(v0: Int) -> String =
  "world"

fn main() -> Unit =
  let v1: () -> String = make_closure(f, [])
  let v2: Dict[traits__trait_fn_type_parameterized.Test, () -> String] = get_dict traits__trait_fn_type_parameterized.Test[() -> String]
  let v3: String = trait_call traits__trait_fn_type_parameterized.Test.test(v2, v1)
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v4, v3)
  let v7: (Int) -> String = make_closure(g, [])
  let v8: Dict[traits__trait_fn_type_parameterized.Test, (Int) -> String] = get_dict traits__trait_fn_type_parameterized.Test[(Int) -> String]
  let v9: String = trait_call traits__trait_fn_type_parameterized.Test.test(v8, v7)
  let v6: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v10: Unit = call println(v6, v9)
  v10

fn Test$$$Fun0$$Var0$$test(v11: () -> k11) -> String =
  "got-unit"

fn Test$$$Fun1$Int$$Var0$$test(v12: (Int) -> l11) -> String =
  "got-int"
