crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_foldable_fold.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_foldable_fold

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v0: List[Int] = construct List::Cons#0(1, v3)
  let v7: (Int, Int) -> Int = make_closure(lambda$31, [])
  let v8: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v9: Int = trait_call core/foldable.Foldable.fold(v8, v0, 0, v7)
  let v10: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v10, v9)
  let v12: Vec[Int] = make_vec(10, 20)
  let v16: (Int, Int) -> Int = make_closure(lambda$32, [])
  let v17: Dict[core/foldable.Foldable, Vec] = get_dict core/foldable.Foldable[Vec]
  let v18: Int = trait_call core/foldable.Foldable.fold(v17, v12, 0, v16)
  let v19: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v20: Unit = call println(v19, v18)
  let v22: Option[Int] = construct Option::Some#0(7)
  let v26: (Int, Int) -> Int = make_closure(lambda$33, [])
  let v27: Dict[core/foldable.Foldable, Option] = get_dict core/foldable.Foldable[Option]
  let v28: Int = trait_call core/foldable.Foldable.fold(v27, v22, 0, v26)
  let v21: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v29: Unit = call println(v21, v28)
  v29

fn lambda$31(v4: Int, v5: Int) -> Int =
  let v6: Int = add_int(v4, v5)
  v6

fn lambda$32(v13: Int, v14: Int) -> Int =
  let v15: Int = add_int(v13, v14)
  v15

fn lambda$33(v23: Int, v24: Int) -> Int =
  let v25: Int = add_int(v23, v24)
  v25
