crates/ir/tests/ir/snapshots/main__ir__lower__traits__trait_hierarchy_functor_map.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module traits__trait_hierarchy_functor_map

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v7: (Int) -> Int = make_closure(lambda$26, [])
  let v8: Dict[core/functor.Functor, List] = get_dict core/functor.Functor[List]
  let v0: List[Int] = trait_call core/functor.Functor.map(v8, v4, v7)
  let v12: (Int, Int) -> Int = make_closure(lambda$27, [])
  let v13: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v14: Int = trait_call core/foldable.Foldable.fold(v13, v0, 0, v12)
  let v15: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v16: Unit = call println(v15, v14)
  let v18: Vec[Int] = make_vec(10, 20)
  let v21: (Int) -> Int = make_closure(lambda$28, [])
  let v22: Dict[core/functor.Functor, Vec] = get_dict core/functor.Functor[Vec]
  let v17: Vec[Int] = trait_call core/functor.Functor.map(v22, v18, v21)
  let v26: (Int, Int) -> Int = make_closure(lambda$29, [])
  let v27: Dict[core/foldable.Foldable, Vec] = get_dict core/foldable.Foldable[Vec]
  let v28: Int = trait_call core/foldable.Foldable.fold(v27, v17, 0, v26)
  let v29: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v30: Unit = call println(v29, v28)
  let v31: Option[Int] = construct Option::Some#0(5)
  let v34: (Int) -> Int = make_closure(lambda$30, [])
  let v35: Dict[core/functor.Functor, Option] = get_dict core/functor.Functor[Option]
  let v36: Option[Int] = trait_call core/functor.Functor.map(v35, v31, v34)
  switch v36 {
    0 (v37: Int) ->
      let v38: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v39: Unit = call println(v38, v37)
      v39
    1 ->
      let v41: Int = neg_int(1)
      let v40: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v42: Unit = call println(v40, v41)
      v42
  }

fn lambda$26(v5: Int) -> Int =
  let v6: Int = mul_int(v5, 2)
  v6

fn lambda$27(v9: Int, v10: Int) -> Int =
  let v11: Int = add_int(v9, v10)
  v11

fn lambda$28(v19: Int) -> Int =
  let v20: Int = mul_int(v19, 2)
  v20

fn lambda$29(v23: Int, v24: Int) -> Int =
  let v25: Int = add_int(v23, v24)
  v25

fn lambda$30(v32: Int) -> Int =
  let v33: Int = add_int(v32, 1)
  v33
